# incidentops-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: app.Dockerfile  mcp.Dockerfile
mcp_servers/runbook_server/: __init__.py  server.py
mcp_servers/runbook_server/data/: cpu_spike.md  db_pool_exhaustion.md  memory_leak.md
src/: __init__.py  config.py
src/agents/: orchestrator.py
src/core/: __init__.py  entities.py  interfaces.py  state.py
src/infra/: __init__.py  cli.py  mcp_client.py
src/services/: __init__.py  correlator.py  parser.py  redactor.py
src/skills/: __init__.py  log_tools.py  metric_tools.py  runbook_tools.py  simulation_tools.py
tests/integration/: test_incident_flow.py
tests/unit/: test_redactor.py
