[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incidentops-ai"
version = "0.1.0"
description = "Autonomous Incident Triage & Response Agent for SRE teams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["sre", "incident-response", "ai-agents", "google-adk", "llm"]
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    # Milestone 2: MCP server + client
    "mcp>=1.0",
    "httpx>=0.27",
    # Milestone 3: Google ADK multi-agent
    "google-adk>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0",
]

[project.scripts]
incidentops = "src.infra.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "mcp_servers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
